    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 113 - 25/10/2006 <==

C <mave> due to problems to elaborate xmlChar* strings of libxml2, I used the QT library for parsing
        xml files; Now, the NNFW depends on QT-4

    ==> 105 - 25/10/2006 <==

C <mave> improved the new style of Doxygen documentation

    ==> 104 - 25/10/2006 <==

C <mave> updated Doxygen to version 1.5.0 and restyled

    ==> 103 - 17/10/2006 <==

- <mave> Dropped make targets: distclean, apidoc, apidoc-clean (these doesn't support out-source buildings)
- <mave> Dropped the support for QMake compilation procedure
C <mave> Starting implementation of load/save operation from XML files;
            used libxml2 for parsing the XML files;
            modified CMakeList.txt to link against libxml2
C <mave> Moved implementation of Variant from inline to normal function (propertized.cpp)
+ <mave> Variant now support Linker* type
C <mave> Propertized has a property 'typename' for registering the name of the class;
B <mave> fixed memory-leak in Updatable name allocation

    ==> 102 - 17/10/2006 <==

- <marmir> Removed mask property (and the related functions) from BaseNeuralNet in neuralnet.h (you can use SetOrder, instead)
+ <marmir> Added another constructor to SparseMatrixLinker in which you can specify the probability of connectivity and whether the matrix has zeros in the diagonal

    ==> 101 - 10/10/2006 <==

C <mave> all OutputFunction (except for PoolFunction) are propertized
C <mave> VectorData copy-constructor create always a VectorData with own data allocated

    ==> 100 - 05/10/2006 <==

C <mave> CopyLinker propertized